[tool.poetry]
name = "usda-nass-explorer"
version = "0.1.0"
description = ""
authors = ["DouglasKrouth <douglaskrouth@gmail.com>"]
readme = "README.md"
packages = [{include = "nass_io"}]

[tool.poetry.dependencies]
python = ">=3.12.6,<3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
